[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = "^0.19.3"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pylint = "^2.14.5"
mypy = "~0.942"

[tool.poetry.scripts]
run = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
